src/objects/Queue_Manager_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Queue_Id__c</fullName>
        <externalId>true</externalId>
        <label>Queue Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Send_Email_Alerts_to_Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this field is set to true, and the field is references in workflow rule criteria, it can be used to prevent notifications from being sent to the Queue.</description>
        <label>Send Email Alerts to Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Queue_Manager_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Queue Manager Mapping</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queue Manager Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>